--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -15,6 +15,6 @@
 
 @media only screen and (max-width: 480px) {
     .card{
-        height: 5rem;
+        height: 5.3rem;
      }
 }
